added new conf parameters

--- a/conf/QGIS.conf
+++ b/conf/QGIS.conf
@@ -1,6 +1,8 @@
 [rt_geosisma_offline]
 baseApiUrl=http://geosisma-test.faunalia.it/
 teamUrl=/api/v1/team/
+requestUrl=/api/v1/request/
 pathToCache=/mnt/data/PROGRAMMING/FAUNALIA/qgis-plugins/rt_geosisma_offline/offlinedata/layers
 pathToDbs=/mnt/data/PROGRAMMING/FAUNALIA/qgis-plugins/rt_geosisma_offline/offlinedata/dbs
-
+safetyDbDefaultSrid=3003
+geoDbDefaultSrid=32632
