--- a/conf/QGIS.conf
+++ b/conf/QGIS.conf
@@ -6,3 +6,4 @@ pathToCache=/mnt/data/PROGRAMMING/FAUNALIA/qgis-plugins/rt_geosisma_offline/offl
 pathToDbs=/mnt/data/PROGRAMMING/FAUNALIA/qgis-plugins/rt_geosisma_offline/offlinedata/dbs
 safetyDbDefaultSrid=3003
 geoDbDefaultSrid=32632
+wmsRepositoryURL=https://dl.dropboxusercontent.com/u/12837459/zz_wms.list.txt.zip
